--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.mayikeji.mayisuyun"
+        applicationId "com.shouji.shoujibaidu"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 40
+        versionName "4.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.android.support:cardview-v7:25.0.1'
     testCompile 'junit:junit:4.12'
-
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.zhy:okhttputils:2.6.2'
+    compile 'com.github.baserecycleradapter:library:1.1.0'
 }
