--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mayikeji.mayisuyun">
+    package="com.mayikeji.shoujibaidu">
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
-        android:name=".application.ClientApplication"
+        android:name="com.mayikeji.shoujibaidu.application.ClientApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/timg"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -14,18 +22,23 @@
         //屏幕适配
         <meta-data
             android:name="design_width"
-            android:value="1080"></meta-data>
+            android:value="1080">
+
+        </meta-data>
         <meta-data
             android:name="design_height"
-            android:value="1920"></meta-data>
+            android:value="1920">
+
+        </meta-data>
 
         //登陆界面
-        <activity android:name=".ui.LoginActivity">
+        <activity android:name="com.mayikeji.shoujibaidu.ui.LoginActivity">
 
         </activity>
 
         //闪屏界面
-        <activity android:name=".ui.SplashActivity"
+        <activity
+            android:name="com.mayikeji.shoujibaidu.ui.SplashActivity"
             android:theme="@style/NoActivityFullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +49,7 @@
 
         //主界面
         <activity
-            android:name=".ui.MainActivity"
+            android:name="com.mayikeji.shoujibaidu.ui.MainActivity"
             android:label="@string/Mai_zy"
             android:launchMode="singleTask">
 
@@ -44,11 +57,32 @@
 
         //设置页面
         <activity
-            android:name=".ui.SettingActivity"
+            android:name="com.mayikeji.shoujibaidu.ui.SettingActivity"
             android:label="@string/Setting_sz"
             android:launchMode="singleTask">
 
         </activity>
+
+        <activity android:name="com.mayikeji.shoujibaidu.ui.OrderActivity" >
+
+        </activity>
+
+        <service
+            android:name="com.mayikeji.shoujibaidu.service.BaseServer"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/base_ser" />
+        </service>
+        <service android:name="com.mayikeji.shoujibaidu.service.ForServer" />
+
+        <service android:name="com.mayikeji.shoujibaidu.service.DownNewApkService" />
     </application>
 
 </manifest>
